# mcp-nixos

./: .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  flake.nix  pyproject.toml
.claude/: settings.json
.claude/agents/: mcp-server-architect.md  python-expert.md
.claude/commands/: release.md  test-tools.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-flakehub.yml  deploy-website.yml  publish.yml
mcp_nixos/: caches.py  config.py  server.py  utils.py
mcp_nixos/sources/: __init__.py  base.py  darwin.py  flake_inputs.py  flakehub.py  flakes.py  home_manager.py  nixdev.py  nixhub.py  nixos.py  nixvim.py  noogle.py  wiki.py
tests/: test_channels.py  test_edge_cases.py  test_evals.py  test_flake_inputs.py  test_flakes.py  test_integration.py  test_main.py  test_mcp_behavior.py  test_mcp_tools.py  test_nixhub.py  test_nixos_stats.py  test_options.py  test_plain_text_output.py  test_real_world_scenarios.py  test_server.py  test_tools.py
website/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
website/app/: page.tsx
website/app/about/: page.tsx
website/app/usage/: page.tsx
website/components/: AnchorHeading.tsx  ClientFooter.tsx  ClientNavbar.tsx  FeatureCard.tsx
website/public/: robots.txt  sitemap.xml
