[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nixos"
version = "2.2.0"
description = "Model Context Protocol server for NixOS, Home Manager, and nix-darwin resources"
readme = "README.md"
authors = [
    {name = "James Brink", email = "james@utensils.io"},
]
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=2.11.0",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=9.0.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.6.0",
    "pytest-rerunfailures>=15.0",
    "ruff>=0.12.4",
    "mypy>=1.17.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4",
    "twine>=6.0.1",
]
win = [
    "pywin32>=308.0",  # Required for Windows-specific file operations and tests
]

[project.scripts]
mcp-nixos = "mcp_nixos.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["mcp_nixos", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E402", "E203"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
explicit_package_bases = true
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=mcp_nixos",
    "--cov-report=term-missing",
]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with `-m 'not slow'`)",
    "integration: marks tests that require external services or interact with external resources",
    "unit: marks tests as unit tests that don't require external services",
    "not_integration: explicitly marks tests that should be excluded from integration test runs",
    "asyncio: mark a test as an async test",
]

[tool.coverage.run]
source = ["mcp_nixos"]
